--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,7 +224,15 @@ p {
   cursor: pointer; }
 
 .material-icons {
-  margin: auto 0; }
+  margin: auto 0;
+  -webkit-user-select: none;
+  /* Chrome all / Safari all */
+  -moz-user-select: none;
+  /* Firefox all */
+  -ms-user-select: none;
+  /* IE 10+ */
+  user-select: none;
+  /* Likely future */ }
 
 .loader {
   height: 100%; }
