--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -268,6 +268,10 @@ p{
 }
 .material-icons{
     margin: auto 0;
+    -webkit-user-select: none;  /* Chrome all / Safari all */
+    -moz-user-select: none;     /* Firefox all */
+    -ms-user-select: none;      /* IE 10+ */
+    user-select: none;          /* Likely future */      
 }
 .loader{
     height: 100%;
