--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,12 +28,19 @@
   #duelCreation .modal-content > div {
     grid-column: span 2; }
 
+.modal-content > .content > p {
+  margin-bottom: .5em; }
+
 .navbar {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   background-image: url(../images/navbar.png);
   background-color: transparent;
   height: 103px;
-  box-shadow: none;
-  background-repeat: no-repeat; }
+  background-repeat: repeat-x;
+  box-shadow: none; }
 
 .navbar-fixed {
   z-index: 1000;
@@ -84,6 +91,10 @@ body {
   background-color: #443127; }
 
 p {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   text-align: center; }
 
 .big-container {
@@ -97,9 +108,35 @@ p {
 
 .score-row {
   display: grid;
-  grid-template-columns: 100px 64px 1fr 1fr; }
+  grid-template-columns: 100px 128px 1fr 1fr;
+  margin: 1em 0;
+  padding: .5em 0;
+  border: 2px solid black;
+  border-radius: 5px; }
+  .score-row.leader {
+    grid-template-columns: 160px 1fr 1fr; }
+    .score-row.leader img {
+      margin: auto; }
   .score-row p {
-    margin: auto; }
+    margin: auto;
+    font-size: 2em;
+    font-weight: bold;
+    color: black; }
+
+.gold {
+  background: radial-gradient(ellipse farthest-corner at right bottom, #FFEBA8 0%, #E5C787 8%, #F2D792 30%, #D2B360 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #F2D792 25%, #5d4a1f 62.5%, #5d4a1f 100%); }
+
+.silver {
+  background: radial-gradient(ellipse farthest-corner at right bottom, #404040 0%, #848484 8%, #EDEDED 30%, #E2E2E2 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #898989 0%, #E2E2E2 8%, #FDFDFD 25%, #A4A4A4 62.5%, #A8A8A8 100%); }
+
+.bronze {
+  background: radial-gradient(ellipse farthest-corner at right bottom, #EABAAD 0%, #DEA99E 8%, #D88F7A 30%, #B07366 60%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFF1EE 0%, #EABAAD 8%, #D88F7A 25%, #7E3B2A 62.5%, #DF946D 100%); }
+
+.light {
+  background-color: lightgray; }
+
+.normal {
+  background-color: gray; }
 
 .dropdown {
   z-index: 998;
@@ -110,10 +147,10 @@ p {
   height: 0px;
   transform-origin: top;
   transition: height 250ms ease-in-out; }
+  .dropdown > .content > a {
+    margin-top: 0.8em; }
   .dropdown.active {
     height: 99px; }
-    .dropdown.active > .content {
-      padding-top: 1em; }
   .dropdown .top {
     background-image: url(../images/dropdownTop.png); }
   .dropdown .bottom {
@@ -228,20 +265,59 @@ p {
 .material-icons {
   margin: auto 0;
   -webkit-user-select: none;
-  /* Chrome all / Safari all */
   -moz-user-select: none;
-  /* Firefox all */
   -ms-user-select: none;
-  /* IE 10+ */
-  user-select: none;
-  /* Likely future */ }
+  user-select: none; }
 
-.loader {
-  height: 100%; }
-  .loader > img {
-    margin: auto;
-    display: block;
-    height: inherit; }
+.loader.large {
+  height: 10rem; }
+.loader.medium {
+  height: 6rem; }
+.loader.medium {
+  height: 3rem; }
+.loader > img {
+  margin: auto;
+  display: block;
+  height: inherit; }
+
+.collapsible-header {
+  display: grid;
+  grid-template-columns: 120px 1fr 30px; }
+  .collapsible-header:nth-child(1) p {
+    text-align: left; }
+
+i.material-icons.hidden {
+  visibility: hidden; }
+
+.success {
+  border-radius: 5px;
+  border: solid 2px green;
+  background-color: lightgreen;
+  color: green;
+  font-size: 1.5em;
+  font-weight: bold; }
+  .success p {
+    text-align: center;
+    margin: auto; }
+
+.errors {
+  border-radius: 5px;
+  border: solid 2px red;
+  background-color: lightcoral;
+  color: red;
+  font-size: 1.5em;
+  font-weight: bold; }
+  .errors p {
+    text-align: center;
+    margin: auto; }
+
+.btn-clear {
+  border: none;
+  background-color: transparent; }
+  .btn-clear * {
+    vertical-align: middle; }
+  .btn-clear:focus {
+    background-color: transparent; }
 
 #inputExample {
   position: absolute;
@@ -264,6 +340,16 @@ p {
   height: 150px;
   opacity: 1; }
 
+#register {
+  margin: 0 auto;
+  display: block;
+  margin-bottom: 50px; }
+
+#loginModal, #registrationModal {
+  min-height: auto; }
+  #loginModal .modal-content, #registrationModal .modal-content {
+    padding-bottom: 0; }
+
 @media (min-width: 992px) {
   a.brand-logo:hover {
     transform: scale(1.1); }
@@ -279,14 +365,14 @@ p {
       -webkit-box-shadow: 0px 0px 10px 10px rgba(227, 163, 0, 0.69);
       -moz-box-shadow: 0px 0px 10px 10px rgba(227, 163, 0, 0.69);
       box-shadow: 0px 0px 10px 10px rgba(227, 163, 0, 0.69); } }
-[data-pie-id] li:nth-child(0) {
-  color: blue; }
-
 [data-pie-id] li:nth-child(1) {
-  color: #4d00ff; }
+  color: #aec4a8; }
 
 [data-pie-id] li:nth-child(2) {
-  color: #9900ff; }
+  color: #62ef3b; }
+
+[data-pie-id] li:nth-child(3) {
+  color: #4bbf2b; }
 
 ul[data-pie-id] {
   list-style: none;
@@ -294,10 +380,5 @@ ul[data-pie-id] {
 
 ul[data-pie-id] + div {
   width: 300px; }
-
-/* Color graph only */
-/*#my-cool-chart g[data-id="g1"] path {
-  fill:yellow;
-}*/
 
 /*# sourceMappingURL=style.css.map */
