--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,384 +1,2 @@
-#questionEditor, #codeEditor, #inputEditor {
-  position: relative;
-  width: inherit; }
-
-.container {
-  max-width: 100%;
-  width: 95%; }
-  .container .row .col {
-    padding: 0; }
-
-.difficultyProgressBar {
-  width: 150px;
-  height: 10px;
-  border-radius: 5px;
-  background-color: darkgrey; }
-  .difficultyProgressBar .difficultyProgressBarForeground {
-    height: 100%;
-    width: 0;
-    background-color: red;
-    border-radius: 5px; }
-
-#inputEditorContainer {
-  position: relative; }
-
-#duelCreation .modal-content {
-  display: grid;
-  grid-template-columns: 1fr 1fr; }
-  #duelCreation .modal-content > div {
-    grid-column: span 2; }
-
-.modal-content > .content > p {
-  margin-bottom: .5em; }
-
-.navbar {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-image: url(../images/navbar.png);
-  background-color: transparent;
-  height: 103px;
-  background-repeat: repeat-x;
-  box-shadow: none; }
-
-.navbar-fixed {
-  z-index: 1000;
-  height: 110px; }
-
-a.brand-logo {
-  height: 80%;
-  padding-left: 0.5em;
-  transition: transform 250ms;
-  outline: none; }
-  a.brand-logo > .logo {
-    width: auto;
-    height: 100%; }
-  a.brand-logo:hover {
-    transform: translate(-50%) scale(1.1); }
-
-li > a.left, li > a.right {
-  padding-right: 5px;
-  padding-left: 5px; }
-
-#modeSelector {
-  display: grid;
-  grid-template-columns: repeat(4, 32px);
-  grid-gap: .4em;
-  justify-content: center;
-  height: 32px; }
-  #modeSelector div {
-    height: inherit; }
-  #modeSelector input {
-    display: none; }
-    #modeSelector input + label {
-      height: inherit;
-      opacity: 0.25;
-      padding-left: 0; }
-      #modeSelector input + label > img {
-        height: inherit;
-        border-radius: 50%; }
-      #modeSelector input + label::after, #modeSelector input + label::before {
-        display: none; }
-    #modeSelector input:checked + label {
-      opacity: 1; }
-      #modeSelector input:checked + label > img {
-        -webkit-box-shadow: 0px 0px 5px 5px rgba(227, 163, 0, 0.69);
-        -moz-box-shadow: 0px 0px 5px 5px rgba(227, 163, 0, 0.69);
-        box-shadow: 0px 0px 5px 5px rgba(227, 163, 0, 0.69); }
-
-body {
-  background-color: #443127; }
-
-p {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  text-align: center; }
-
-.big-container {
-  width: 80%; }
-
-.md-container {
-  width: 70%; }
-
-.big-container, .md-container {
-  margin: 0 auto; }
-
-.score-row {
-  display: grid;
-  grid-template-columns: 100px 128px 1fr 1fr;
-  margin: 1em 0;
-  padding: .5em 0;
-  border: 2px solid black;
-  border-radius: 5px; }
-  .score-row.leader {
-    grid-template-columns: 160px 1fr 1fr; }
-    .score-row.leader img {
-      margin: auto; }
-  .score-row p {
-    margin: auto;
-    font-size: 2em;
-    font-weight: bold;
-    color: black; }
-
-.gold {
-  background: radial-gradient(ellipse farthest-corner at right bottom, #FFEBA8 0%, #E5C787 8%, #F2D792 30%, #D2B360 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #F2D792 25%, #5d4a1f 62.5%, #5d4a1f 100%); }
-
-.silver {
-  background: radial-gradient(ellipse farthest-corner at right bottom, #404040 0%, #848484 8%, #EDEDED 30%, #E2E2E2 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #898989 0%, #E2E2E2 8%, #FDFDFD 25%, #A4A4A4 62.5%, #A8A8A8 100%); }
-
-.bronze {
-  background: radial-gradient(ellipse farthest-corner at right bottom, #EABAAD 0%, #DEA99E 8%, #D88F7A 30%, #B07366 60%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFF1EE 0%, #EABAAD 8%, #D88F7A 25%, #7E3B2A 62.5%, #DF946D 100%); }
-
-.light {
-  background-color: lightgray; }
-
-.normal {
-  background-color: gray; }
-
-.dropdown {
-  z-index: 998;
-  position: absolute;
-  right: 0;
-  top: 67px;
-  width: 200px;
-  height: 0px;
-  transform-origin: top;
-  transition: height 250ms ease-in-out; }
-  .dropdown > .content > a {
-    margin-top: 0.8em; }
-  .dropdown.active {
-    height: 99px; }
-  .dropdown .top {
-    background-image: url(../images/dropdownTop.png); }
-  .dropdown .bottom {
-    background-image: url(../images/dropdownBottom.png); }
-  .dropdown .top, .dropdown .bottom {
-    width: inherit;
-    height: 29px;
-    background-size: cover; }
-  .dropdown > .content {
-    background-image: url(../images/dropdownMiddle.png);
-    background-size: cover;
-    width: inherit;
-    height: inherit;
-    overflow: hidden;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    justify-content: center; }
-    .dropdown > .content > a {
-      height: 32px;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      justify-items: center;
-      line-height: 32px; }
-
-.nav-link {
-  border: none;
-  background-color: transparent; }
-
-.password {
-  display: grid;
-  grid-template-columns: 1fr 50px; }
-
-.btn-password {
-  position: relative;
-  background: none;
-  border: none;
-  border-bottom: 1px solid #9e9e9e;
-  margin: 0 0 20px 0; }
-  .btn-password:hover, .btn-password:focus, .btn-password:active {
-    background: none; }
-  .btn-password::after {
-    content: " ";
-    position: absolute;
-    height: 60%;
-    width: 100%;
-    border-left: 1px solid #9e9e9e;
-    top: 20%;
-    left: 0; }
-
-.passwordStrength {
-  position: absolute;
-  right: 60px;
-  top: 18px;
-  width: 150px;
-  height: 10px;
-  border-radius: 5px;
-  background-color: darkgrey; }
-  .passwordStrength .passwordStrengthForeground {
-    height: 100%;
-    border-radius: 5px; }
-
-.passwordStrengthForeground[strength="0"] {
-  background-color: red;
-  width: 0; }
-.passwordStrengthForeground[strength="1"] {
-  background-color: red;
-  width: 20%; }
-.passwordStrengthForeground[strength="2"] {
-  background-color: orange;
-  width: 40%; }
-.passwordStrengthForeground[strength="3"] {
-  background-color: yellow;
-  width: 60%; }
-.passwordStrengthForeground[strength="4"] {
-  background-color: yellow;
-  width: 80%; }
-.passwordStrengthForeground[strength="5"] {
-  background-color: green;
-  width: 100%; }
-
-.collapsible, .collapsible-body, .collapsible-header {
-  border: none; }
-
-.collapsible-header {
-  background-color: #660107;
-  border-bottom: 1px solid black; }
-
-.editor {
-  height: 500px; }
-
-.relative {
-  position: relative; }
-
-.splitScreen {
-  display: grid;
-  grid-template-columns: 1fr 1fr; }
-  .splitScreen > *:first-child {
-    padding: 2em;
-    border-right: 1px solid black; }
-
-.hidden {
-  display: none; }
-
-.userImg {
-  height: 128px;
-  width: 128px;
-  border-radius: 50%; }
-
-.clickable {
-  cursor: pointer; }
-
-.material-icons {
-  margin: auto 0;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
-
-.loader.large {
-  height: 10rem; }
-.loader.medium {
-  height: 6rem; }
-.loader.medium {
-  height: 3rem; }
-.loader > img {
-  margin: auto;
-  display: block;
-  height: inherit; }
-
-.collapsible-header {
-  display: grid;
-  grid-template-columns: 120px 1fr 30px; }
-  .collapsible-header:nth-child(1) p {
-    text-align: left; }
-
-i.material-icons.hidden {
-  visibility: hidden; }
-
-.success {
-  border-radius: 5px;
-  border: solid 2px green;
-  background-color: lightgreen;
-  color: green;
-  font-size: 1.5em;
-  font-weight: bold; }
-  .success p {
-    text-align: center;
-    margin: auto; }
-
-.errors {
-  border-radius: 5px;
-  border: solid 2px red;
-  background-color: lightcoral;
-  color: red;
-  font-size: 1.5em;
-  font-weight: bold; }
-  .errors p {
-    text-align: center;
-    margin: auto; }
-
-.btn-clear {
-  border: none;
-  background-color: transparent; }
-  .btn-clear * {
-    vertical-align: middle; }
-  .btn-clear:focus {
-    background-color: transparent; }
-
-#inputExample {
-  position: absolute;
-  z-index: 50;
-  background-color: white;
-  border: solid grey 2px;
-  height: 0px;
-  bottom: 0.2em;
-  left: 0.3em;
-  right: 0.3em;
-  overflow: scroll;
-  opacity: 0;
-  transition: opacity 250ms, height 250ms; }
-  #inputExample .content {
-    margin: 0 .25em;
-    width: calc(100% - .5em);
-    white-space: nowrap; }
-
-.active #inputExample {
-  height: 150px;
-  opacity: 1; }
-
-#register {
-  margin: 0 auto;
-  display: block;
-  margin-bottom: 50px; }
-
-#loginModal, #registrationModal {
-  min-height: auto; }
-  #loginModal .modal-content, #registrationModal .modal-content {
-    padding-bottom: 0; }
-
-@media (min-width: 992px) {
-  a.brand-logo:hover {
-    transform: scale(1.1); }
-
-  .navbar-fixed {
-    height: 120px; }
-
-  #modeSelector {
-    grid-template-columns: repeat(4, 64px);
-    height: 64px;
-    grid-gap: .7em; }
-    #modeSelector input:checked + label > img {
-      -webkit-box-shadow: 0px 0px 10px 10px rgba(227, 163, 0, 0.69);
-      -moz-box-shadow: 0px 0px 10px 10px rgba(227, 163, 0, 0.69);
-      box-shadow: 0px 0px 10px 10px rgba(227, 163, 0, 0.69); } }
-[data-pie-id] li:nth-child(1) {
-  color: #aec4a8; }
-
-[data-pie-id] li:nth-child(2) {
-  color: #62ef3b; }
-
-[data-pie-id] li:nth-child(3) {
-  color: #4bbf2b; }
-
-ul[data-pie-id] {
-  list-style: none;
-  padding: 10px; }
-
-ul[data-pie-id] + div {
-  width: 300px; }
-
+#questionEditor,#codeEditor,#inputEditor{position:relative;width:inherit}.container{max-width:100%;width:95%}.container .row .col{padding:0}.difficultyProgressBar{width:150px;height:10px;border-radius:5px;background-color:darkgrey}.difficultyProgressBar .difficultyProgressBarForeground{height:100%;width:0;background-color:red;border-radius:5px}#inputEditorContainer{position:relative}#duelCreation .modal-content{display:-ms-grid;display:grid;-ms-grid-columns:1fr 1fr;grid-template-columns:1fr 1fr}#duelCreation .modal-content>div{grid-column:span 2}.modal-content>.content>p{margin-bottom:.5em}.navbar{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;background-image:url(../images/navbar.png);background-color:transparent;height:103px;background-repeat:repeat-x;-webkit-box-shadow:none;box-shadow:none}.navbar-fixed{z-index:1000;height:110px}a.brand-logo{height:80%;padding-left:0.5em;-webkit-transition:-webkit-transform 250ms;transition:-webkit-transform 250ms;transition:transform 250ms;transition:transform 250ms, -webkit-transform 250ms;outline:none}a.brand-logo>.logo{width:auto;height:100%}a.brand-logo:hover{-webkit-transform:translate(-50%) scale(1.1);transform:translate(-50%) scale(1.1)}li>a.left,li>a.right{padding-right:5px;padding-left:5px}#modeSelector{display:-ms-grid;display:grid;-ms-grid-columns:(32px)[4];grid-template-columns:repeat(4, 32px);grid-gap:.4em;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;height:32px}#modeSelector div{height:inherit}#modeSelector input{display:none}#modeSelector input+label{height:inherit;opacity:0.25;padding-left:0}#modeSelector input+label>img{height:inherit;border-radius:50%}#modeSelector input+label::after,#modeSelector input+label::before{display:none}#modeSelector input:checked+label{opacity:1}#modeSelector input:checked+label>img{-webkit-box-shadow:0px 0px 5px 5px rgba(227,163,0,0.69);box-shadow:0px 0px 5px 5px rgba(227,163,0,0.69)}body{background-color:#443127}p{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;text-align:center}.big-container{width:80%}.md-container{width:70%}.big-container,.md-container{margin:0 auto}.score-row{display:-ms-grid;display:grid;-ms-grid-columns:100px 128px 1fr 1fr;grid-template-columns:100px 128px 1fr 1fr;margin:1em 0;padding:.5em 0;border:2px solid black;border-radius:5px}.score-row.leader{-ms-grid-columns:160px 1fr 1fr;grid-template-columns:160px 1fr 1fr}.score-row.leader img{margin:auto}.score-row p{margin:auto;font-size:2em;font-weight:bold;color:black}.gold{background:radial-gradient(ellipse farthest-corner at right bottom, #FFEBA8 0%, #E5C787 8%, #F2D792 30%, #D2B360 40%, transparent 80%),radial-gradient(ellipse farthest-corner at left top, #fff 0%, #FFFFAC 8%, #F2D792 25%, #5d4a1f 62.5%, #5d4a1f 100%)}.silver{background:radial-gradient(ellipse farthest-corner at right bottom, #404040 0%, #848484 8%, #EDEDED 30%, #E2E2E2 40%, transparent 80%),radial-gradient(ellipse farthest-corner at left top, #898989 0%, #E2E2E2 8%, #FDFDFD 25%, #A4A4A4 62.5%, #A8A8A8 100%)}.bronze{background:radial-gradient(ellipse farthest-corner at right bottom, #EABAAD 0%, #DEA99E 8%, #D88F7A 30%, #B07366 60%, transparent 80%),radial-gradient(ellipse farthest-corner at left top, #FFF1EE 0%, #EABAAD 8%, #D88F7A 25%, #7E3B2A 62.5%, #DF946D 100%)}.light{background-color:lightgray}.normal{background-color:gray}.dropdown{z-index:998;position:absolute;right:0;top:67px;width:200px;height:0px;-webkit-transform-origin:top;transform-origin:top;-webkit-transition:height 250ms ease-in-out;transition:height 250ms ease-in-out}.dropdown>.content>a{margin-top:0.8em}.dropdown.active{height:99px}.dropdown .top{background-image:url(../images/dropdownTop.png)}.dropdown .bottom{background-image:url(../images/dropdownBottom.png)}.dropdown .top,.dropdown .bottom{width:inherit;height:29px;background-size:cover}.dropdown>.content{background-image:url(../images/dropdownMiddle.png);background-size:cover;width:inherit;height:inherit;overflow:hidden;display:-ms-grid;display:grid;-ms-grid-rows:1fr 1fr;grid-template-rows:1fr 1fr;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center}.dropdown>.content>a{height:32px;display:-ms-grid;display:grid;-ms-grid-columns:1fr 1fr;grid-template-columns:1fr 1fr;justify-items:center;line-height:32px}.nav-link{border:none;background-color:transparent}.password{display:-ms-grid;display:grid;-ms-grid-columns:1fr 50px;grid-template-columns:1fr 50px}.btn-password{position:relative;background:none;border:none;border-bottom:1px solid #9e9e9e;margin:0 0 20px 0}.btn-password:hover,.btn-password:focus,.btn-password:active{background:none}.btn-password::after{content:" ";position:absolute;height:60%;width:100%;border-left:1px solid #9e9e9e;top:20%;left:0}.passwordStrength{position:absolute;right:60px;top:18px;width:150px;height:10px;border-radius:5px;background-color:darkgrey}.passwordStrength .passwordStrengthForeground{height:100%;border-radius:5px}.passwordStrengthForeground[strength="0"]{background-color:red;width:0}.passwordStrengthForeground[strength="1"]{background-color:red;width:20%}.passwordStrengthForeground[strength="2"]{background-color:orange;width:40%}.passwordStrengthForeground[strength="3"]{background-color:yellow;width:60%}.passwordStrengthForeground[strength="4"]{background-color:yellow;width:80%}.passwordStrengthForeground[strength="5"]{background-color:green;width:100%}.collapsible,.collapsible-body,.collapsible-header{border:none}.collapsible-header{background-color:#660107;border-bottom:1px solid black}.editor{height:500px}.relative{position:relative}.splitScreen{display:-ms-grid;display:grid;-ms-grid-columns:1fr 1fr;grid-template-columns:1fr 1fr}.splitScreen>*:first-child{padding:2em;border-right:1px solid black}.hidden{display:none}.userImg{height:128px;width:128px;border-radius:50%}.clickable{cursor:pointer}.material-icons{margin:auto 0;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.loader.large{height:10rem}.loader.medium{height:6rem}.loader.medium{height:3rem}.loader>img{margin:auto;display:block;height:inherit}.collapsible-header{display:-ms-grid;display:grid;-ms-grid-columns:120px 1fr 30px;grid-template-columns:120px 1fr 30px}.collapsible-header:nth-child(1) p{text-align:left}i.material-icons.hidden{visibility:hidden}.success{border-radius:5px;border:solid 2px green;background-color:lightgreen;color:green;font-size:1.5em;font-weight:bold}.success p{text-align:center;margin:auto}.errors{border-radius:5px;border:solid 2px red;background-color:lightcoral;color:red;font-size:1.5em;font-weight:bold}.errors p{text-align:center;margin:auto}.btn-clear{border:none;background-color:transparent}.btn-clear *{vertical-align:middle}.btn-clear:focus{background-color:transparent}.btn-clear img{position:relative;z-index:-1}#inputExample{position:absolute;z-index:50;background-color:white;border:solid grey 2px;height:0px;bottom:0.2em;left:0.3em;right:0.3em;overflow:scroll;opacity:0;-webkit-transition:opacity 250ms, height 250ms;transition:opacity 250ms, height 250ms}#inputExample .content{margin:0 .25em;width:calc(100% - .5em);white-space:nowrap}.active #inputExample{height:150px;opacity:1}#register{margin:0 auto;display:block;margin-bottom:50px}#loginModal,#registrationModal{min-height:auto}#loginModal .modal-content,#registrationModal .modal-content{padding-bottom:0}@media (min-width: 992px){a.brand-logo:hover{-webkit-transform:scale(1.1);transform:scale(1.1)}.navbar-fixed{height:120px}#modeSelector{-ms-grid-columns:(64px)[4];grid-template-columns:repeat(4, 64px);height:64px;grid-gap:.7em}#modeSelector input:checked+label>img{-webkit-box-shadow:0px 0px 10px 10px rgba(227,163,0,0.69);box-shadow:0px 0px 10px 10px rgba(227,163,0,0.69)}}[data-pie-id] li:nth-child(1){color:#aec4a8}[data-pie-id] li:nth-child(2){color:#62ef3b}[data-pie-id] li:nth-child(3){color:#4bbf2b}ul[data-pie-id]{list-style:none;padding:10px}ul[data-pie-id]+div{width:300px}
 /*# sourceMappingURL=style.css.map */
