--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,13 @@
+$darkRed: #9e9e9e;
+$darkBrown: #443127;
+$green: #9e9e9e;
+$red: #9e9e9e;
+
+$normalImgSize: 8em;
+$smallImgSize: 4em;
+
+$smallSpace: .5em;
+
 @mixin userSelect($property){
     -webkit-user-select: $property; 
     -moz-user-select: $property; 
@@ -8,31 +18,11 @@
     position: relative;
     width: inherit;
 }
-.container {
-    max-width: 100%;
-    width: 95%;
-    & .row .col {
-        padding: 0;
-    }
-}
-.difficultyProgressBar{
-    width: 150px;
-    height: 10px;
-    border-radius: 5px;
-    background-color: darkgrey;
-    & .difficultyProgressBarForeground{
-        height: 100%;
-        width: 0;
-        background-color: red;
-        border-radius: 5px;
-    }
-}
 #inputEditorContainer{
     position: relative;
 }
-
 #duelCreation{
-    & .modal-content{
+    & .content{
         display: grid;
         grid-template-columns : 1fr 1fr;
         & > div{
@@ -42,7 +32,7 @@
     }
 }
 .modal-content>.content>p{
-    margin-bottom: .5em;
+    margin-bottom: $smallSpace;
 }
 
 //------------------------------------ NAVBAR ------------------------------------//
@@ -60,7 +50,7 @@
 }
 a.brand-logo{
     height: 80%;
-    padding-left: 0.5em;
+    padding-left: $smallSpace;
     transition: transform 250ms;
     outline: none;
     & > .logo{
@@ -92,7 +82,7 @@ li > a{
 
         &+label{
             height: inherit;
-            opacity: 0.25;
+            opacity: .25;
             padding-left: 0;
             &>img{
                 height: inherit;
@@ -105,9 +95,9 @@ li > a{
         &:checked+label{
             opacity: 1;
             &>img{
-                -webkit-box-shadow: 0px 0px 5px 5px rgba(227,163,0,0.69);
-                -moz-box-shadow: 0px 0px 5px 5px rgba(227,163,0,0.69);
-                box-shadow: 0px 0px 5px 5px rgba(227,163,0,0.69); 
+                -webkit-box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69);
+                -moz-box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69);
+                box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69); 
             }
         }
     }
@@ -118,7 +108,7 @@ li > a{
 //------------------------------------ GOOD CSS ------------------------------------//
 //------------------------------------ BASE ------------------------------------//
 body{
-    background-color: #443127;
+    background-color: $darkBrown;
 }
 p, a{
     @include userSelect(none);  
@@ -127,7 +117,7 @@ p, a{
 label[for='userImage']{
     height: inherit;
     position: relative;
-    width: 8em;
+    width: $normalImgSize;
 }
 button[name='deleteUserImage']{
     position: absolute;
@@ -138,24 +128,31 @@ button[name='deleteUserImage']{
     border-radius: 50%;
     background-color: transparent;
     & img{
-        height: 100%;
-        width: 100%;
+        height: inherit;
+        width: inherit;
         display: block;
         border-radius: 50%;
     }
 }
 //------------------------------------ CLASSES ------------------------------------//
+#duelLangageImg{
+    height: $smallImgSize;
+    border-radius: 50%;
+    -webkit-box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69);
+    -moz-box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69);
+    box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69); 
+}
 .score-row{
     &.leader{
-        grid-template-columns: 160px 1fr 1fr;
+        grid-template-columns: $normalImgSize + 2em 1fr 1fr;
         & img {
             margin: auto;
         }
     }
     display: grid;
-    grid-template-columns: 100px 8em 1fr 1fr;
+    grid-template-columns: 7em $normalImgSize 1fr 1fr;
     margin: 1em 0;
-    padding: .5em 0;
+    padding: $smallSpace 0;
     border: 2px solid black;
     border-radius: 5px;
     & p{
@@ -187,16 +184,16 @@ button[name='deleteUserImage']{
     z-index:998;
     position: fixed;
     right: 0;
-    top: 67px;
-    width: 200px;
+    top: 4.2em;
+    width: 13em;
     height: 0px;
     transform-origin: top;
     transition: height 250ms ease-in-out;
     &>.content>a{
-        margin-top: 0.8em;
+        margin-top: .8em;
     }
     &.active{
-        height: 99px;
+        height: 6em;
     }
     & .top{
         background-image: url(../images/dropdownTop.png);
@@ -206,7 +203,7 @@ button[name='deleteUserImage']{
     }
     & .top, & .bottom{
         width: inherit;
-        height: 29px;
+        height: 2em;
         background-size: cover;
     }
     &>.content{
@@ -219,11 +216,11 @@ button[name='deleteUserImage']{
         grid-template-rows: 1fr 1fr;
         justify-content: center;
         &>a{
-            height: 32px;
+            height: 2em;
             display: grid;
             grid-template-columns: 1fr 1fr;        
             justify-items: center;
-            line-height: 32px;
+            line-height: 2em;
         }
     }
 }
@@ -233,7 +230,7 @@ button[name='deleteUserImage']{
 }
 .password{
     display: grid;
-    grid-template-columns: 1fr 50px;
+    grid-template-columns: 1fr 3em;
 }
 .btn-password{
     position: relative;
@@ -256,9 +253,9 @@ button[name='deleteUserImage']{
 }
 .passwordStrength{
     position:absolute;
-    right: 60px;
-    top: 18px;
-    width: 80px;
+    right: 4em;
+    top: 1em;
+    width: 5em;
     height: 10px;
     border-radius: 5px;
     background-color: darkgrey;
@@ -304,7 +301,7 @@ button[name='deleteUserImage']{
     border-bottom: 1px solid black;
 }
 .editor{
-    height: 500px;
+    height: 30em;
 }
 .relative{
     position: relative;
@@ -341,16 +338,13 @@ button[name='deleteUserImage']{
     border: solid black 2px;
     border-radius: 50%;
 }
-.userImg:not([src$='user-image.png']){
-    background-color: transparent !important;
-}
 .imgSize, .userImg{
-    height: 8em;
-    width: 8em;
+    height: $normalImgSize;
+    width: $normalImgSize;
 
     &.small{
-        height: 4em;
-        width: 4em;
+        height: $smallImgSize;
+        width: $smallImgSize;
     }
 }
 .clickable{
@@ -378,7 +372,7 @@ button[name='deleteUserImage']{
 }
 .collapsible-header{
     display: grid;
-    grid-template-columns: 120px 1fr 30px;
+    grid-template-columns: 8em 1fr 2em;
     &:nth-child(1) p{
         text-align: left;
     }
@@ -429,48 +423,51 @@ i.material-icons.hidden{
 }
 .duelList{
     & li{
+        justify-items: center;
+        margin-top: .25em;
         display: grid;
-        grid-template-columns: 4em 1fr 2em 2em 1fr 4em;
+        grid-template-columns: $smallImgSize + 1em 1fr $smallImgSize / 2 $smallImgSize / 2 1fr $smallImgSize + 1em;
         align-items: center;
-        & :nth-child(1){
+        &>:nth-child(1){
             grid-row: 1;
             grid-column: 1 / span 3;
             height: 100%;
-            border-radius: .5em 0 0 .5em;
+            width: 100%;
+            border-radius: $smallSpace 0 0 $smallSpace;
         }
-        & :nth-child(2){
+        &>:nth-child(2){
             grid-row: 1;
             grid-column: 4 / span 3;
             height: 100%;
-            border-radius: 0 .5em .5em 0;
+            width: 100%;
+            border-radius: 0 $smallSpace $smallSpace 0;
         }
-        & :nth-child(3){
-            margin-left: .5em;
+        &>:nth-child(3){
             grid-row: 1;
             grid-column: 1;
         }
-        & :nth-child(4){
+        &>:nth-child(4){
             grid-row: 1;
             grid-column: 2;
         }
-        & :nth-child(5){
+        &>:nth-child(5){
             grid-row: 1;
             grid-column: 3 / span 2;
         }
-        & :nth-child(6){
+        &>:nth-child(6){
             grid-row: 1;
             grid-column: 5;
         }
-        & :nth-child(7){
-            margin-right: .5em;
+        &>:nth-child(7){
             grid-row: 1;
             grid-column: 6;
         }
-        & :nth-child(8){
+        &>:nth-child(8){
             grid-row: 1;
             grid-column: 1 / span 6;
             height: 100%;
-            line-height: 4em;
+            line-height: $smallImgSize;
+            width: 100%;
         }
     }
     & p, & a{
@@ -478,26 +475,29 @@ i.material-icons.hidden{
         font-size: 1.5rem;
     }
     & .won{
-        background-color: lightgreen;
+        background-color: green;
     }
     & .lost{
-        background-color: lightcoral;
+        background-color: red;
     }
     & .draw{
-        background-color: lightyellow;
+        background-color: yellow;
     }
     & .expired{
-        background-color: lightgray;
+        background-color: grey;
     }
     & .inProgress{
         display: none;
     }
     & .won, & .lost, & .draw, & .expired, & .inProgress{
-        opacity: .5;
+        opacity: 1;
     }
     margin-bottom: 1em;
 }
-
+.duelSplit{
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
 
 //------------------------------------ IDS ------------------------------------//
 #inputExample{
@@ -506,9 +506,9 @@ i.material-icons.hidden{
     background-color: white;
     border: solid grey 2px;
     height: 0px;
-    bottom: 0.2em;
-    left: 0.3em;
-    right: 0.3em;
+    bottom: .2em;
+    left: .3em;
+    right: .3em;
     overflow: scroll;
     opacity: 0;
     transition: opacity 250ms,
@@ -521,13 +521,13 @@ i.material-icons.hidden{
     }
 }
 .active #inputExample{
-    height: 150px;
+    height: 9em;
     opacity: 1;
 }
 #register{
     margin: 0 auto;
     display: block;
-    margin-bottom: 50px;
+    margin-bottom: 3.5em;
 }
 #loginModal, #registrationModal{
     min-height: auto;
@@ -549,6 +549,9 @@ i.material-icons.hidden{
         opacity: .5;
     }
 }
+#duelCreation{
+    background-color: #443127;
+}
 //------------------------------------ MEDIUM TO MAX SIZE ------------------------------------//
 @media (min-width: 992px) {
     //------------------------------------ NAVBAR ------------------------------------//
@@ -556,27 +559,27 @@ i.material-icons.hidden{
         transform: scale(1.1);
     }
     .navbar-fixed {
-        height: 120px;
+        height: 8em;
     }
 
     #modeSelector, #duelModeSelector {
-        grid-template-columns : repeat(4, 4em);
-        height: 4em;
+        grid-template-columns : repeat(4, $smallImgSize);
+        height: $smallImgSize;
         grid-gap: .7em;
         & input{
             &:checked+label{
                 &>img{
-                    -webkit-box-shadow: 0px 0px 10px 10px rgba(227,163,0,0.69);
-                    -moz-box-shadow: 0px 0px 10px 10px rgba(227,163,0,0.69);
-                    box-shadow: 0px 0px 10px 10px rgba(227,163,0,0.69); 
+                    -webkit-box-shadow: 0px 0px 10px 10px rgba(227,163,0,.69);
+                    -moz-box-shadow: 0px 0px 10px 10px rgba(227,163,0,.69);
+                    box-shadow: 0px 0px 10px 10px rgba(227,163,0,.69); 
                 }
             }
         }
     }
     #duelModeSelector{
-        grid-template-columns : repeat(5, 4em);
+        grid-template-columns : repeat(5, $smallImgSize);
     }
-    
+
     .split{
         grid-template-columns: 1fr 1fr;
     }
@@ -590,7 +593,7 @@ i.material-icons.hidden{
         margin: 0 auto;
     }
     .passwordStrength{
-        width: 150px;
+        width: 9em;
     }
 }
 
@@ -609,8 +612,8 @@ i.material-icons.hidden{
 }
 ul[data-pie-id] {
     list-style: none;
-    padding: 10px;
+    padding: 1em;
 }
 ul[data-pie-id] + div {
-    width:300px;
+    width: 20em;
 }
