--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,5 +1,6 @@
 $darkRed: #9e9e9e;
 $darkBrown: #443127;
+$darkerBrown: #301d13;
 $green: #9e9e9e;
 $red: #9e9e9e;
 
@@ -140,13 +141,28 @@ button{
     }  
     background-color: white;
 }
+footer{
+    z-index:1006;
+    height: 48px;
+    background-color: $darkerBrown;
+    width: 100%;
+    & *{
+        display: block;
+        margin: auto;
+        line-height: 48px;
+    }
+    &.fixed{
+        position: fixed;
+        bottom: 0;
+    }
+}
+pre{
+    white-space: pre-wrap;
+}
 //------------------------------------ CLASSES ------------------------------------//
-#duelLangageImg{
-    height: $smallImgSize;
-    border-radius: 50%;
-    -webkit-box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69);
-    -moz-box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69);
-    box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69); 
+.questionTitle{
+    font-size: 2rem;
+    background-color: lightgray;
 }
 .score-row{
     &.leader{
@@ -306,8 +322,14 @@ button{
     background-color: #660107;
     border-bottom: 1px solid black;
 }
-.editor{
-    height: 30em;
+.editor, #question{
+    height: 60vh;
+}
+#question{
+    overflow-y: scroll;
+    background-color: white;
+    padding: 1em;
+    border: solid grey 3px;
 }
 .relative{
     position: relative;
@@ -428,6 +450,8 @@ i.material-icons.hidden{
     max-height: 95%;
 }
 .duelList{
+    height: 50vh;
+    overflow-y: scroll;
     & li{
         justify-items: center;
         margin-top: .25em;
@@ -472,8 +496,10 @@ i.material-icons.hidden{
             grid-row: 1;
             grid-column: 1 / span 6;
             height: 100%;
-            line-height: $smallImgSize;
             width: 100%;
+            color:black;
+            -webkit-text-stroke: 1px;
+            -webkit-text-stroke-color: white;
         }
     }
     & p, & a{
@@ -493,7 +519,7 @@ i.material-icons.hidden{
         background-color: grey;
     }
     & .inProgress{
-        display: none;
+        background-color: lightblue;
     }
     & .won, & .lost, & .draw, & .expired, & .inProgress{
         opacity: 1;
@@ -502,10 +528,33 @@ i.material-icons.hidden{
 }
 .duelSplit{
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-gap: 1em;
+    grid-template-columns: 25% 75%;
 }
-
+.side-nav li:last-child{
+    color: black;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+}
+.editorError{
+    grid-column: span 2;
+    height: 30vh;
+    overflow-y: scroll;
+    background-color: white;
+    padding: 1em;
+    border: solid grey 3px;
+    & *{
+        text-align: left;
+    }
+}
 //------------------------------------ IDS ------------------------------------//
+#duelLangageImg, .langageImg{
+    height: $smallImgSize;
+    border-radius: 50%;
+    -webkit-box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69);
+    -moz-box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69);
+    box-shadow: 0px 0px 5px 5px rgba(227,163,0,.69); 
+}
 #inputExample{
     position: absolute;
     z-index: 50;
@@ -558,6 +607,9 @@ i.material-icons.hidden{
 #duelCreation{
     background-color: #443127;
 }
+#langageDropdown{
+    display: none;
+}
 //------------------------------------ MEDIUM TO MAX SIZE ------------------------------------//
 @media (min-width: 992px) {
     .imgSize, .userImg{
@@ -568,6 +620,9 @@ i.material-icons.hidden{
             height: $smallImgSize;
             width: $smallImgSize;
         }
+    }
+    #langageDropdown{
+        display: block;
     }
     //------------------------------------ NAVBAR ------------------------------------//
     a.brand-logo:hover{
