--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,14 @@ li > a.left, li > a.right {
   grid-template-columns: repeat(5, 2em); }
 
 body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column; }
+
+main {
+  flex: 1 0 auto; }
+
+body {
   background-color: #443127; }
 
 p, a {
@@ -116,9 +124,6 @@ footer {
     display: block;
     margin: auto;
     line-height: 48px; }
-  footer.fixed {
-    position: fixed;
-    bottom: 0; }
 
 pre {
   white-space: pre-wrap; }
@@ -341,27 +346,43 @@ pre {
 i.material-icons.hidden {
   visibility: hidden; }
 
-.success {
+div.success {
   border-radius: 5px;
   border: solid 2px green;
   background-color: lightgreen;
   color: green;
   font-size: 1.5em;
   font-weight: bold; }
-  .success p {
+  div.success p {
     text-align: center;
     margin: auto; }
 
-.errors {
+p.success {
+  color: green;
+  font-size: 1.5em;
+  font-weight: bold; }
+
+div.errors {
   border-radius: 5px;
   border: solid 2px red;
   background-color: lightcoral;
   color: red;
   font-size: 1.5em;
   font-weight: bold; }
-  .errors p {
+  div.errors p {
     text-align: center;
     margin: auto; }
+
+p.errors {
+  color: red;
+  font-size: 1.5em;
+  font-weight: bold; }
+
+p.normal {
+  color: darkorange;
+  background-color: transparent;
+  font-size: 1.5em;
+  font-weight: bold; }
 
 .btn-clear {
   border: none;
